--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "neon-block-bingo-ai",
+  "name": "neon-bingo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@google/genai": "^1.35.0",
-    "@supabase/supabase-js": "2.39.3"
+    "@supabase/supabase-js": "^2.39.3"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.0.0"
   }
 }
